Notifications now correclty display over other content on the page (fixed issue with z-index of notifications preventing anything at the top of the page being clickable)

--- a/app/public/stylesheets/index.css
+++ b/app/public/stylesheets/index.css
@@ -19,12 +19,8 @@ body {
 /* Stlyes used to display notifcations */
 .notification {
   position: fixed;
-  padding: 60px;
+  padding-top: 60px;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
   z-index: 100;
-}
-.inner-notification {
-  margin: 0 auto;
 }
